fix: color and text align corrected

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
     }
   
 h2 {
-    color: blue;
+    color: #2c6ebe ;
     font-family: "Helvetica","Tahoma", sans-serif;
     font-size: 50px;
     font-weight: 200;
@@ -30,35 +30,51 @@ p {
     font-family: "Yantramanav","Tahoma", sans-serif;
     font-size: 24px;
     font-weight: 100;
-    margin: 0;
+    margin-left: 20px;
+    margin-right: 20px;
     text-align: justify;
     text-indent: 1.5em;
     }
 
 body{
-    background-color: rgb(78, 211, 235);
+    background-color:#2c6ebe ;
     width: 1024px;
     margin-left: auto;
     margin-right: auto;
     }
 
+main {
+    width: 1024px;
+    background-color: rgb(78, 211, 235);
+}
+
 nav {
-      background-color: #71ddd8;
-      border-bottom: 1px solid #466995;
-      width: 100%;
-      z-index: 10;
+    display: flex;
+    background-color: #71ddd8;
+    border-bottom: 1px solid #466995;
+    width: 100%;
+      
     }
+
+ul {
+
+    display: flex;
+    justify-content: space-around;
+    margin-left: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
     
 li {
       color: #FFF;
       font-family: "Oswald","Tahoma", sans-serif;
       font-size: 16px;
       font-weight: 600;
-      text-transform: uppercase;
       display: inline-block;
-      width: 120px;
+      width: 143px;
       margin: 10px auto;
-      padding: 0 20px;
+      padding: 0 15px;
     }
 
 figure {
@@ -68,7 +84,11 @@ figure {
       font-style: italic;
       font-size: 18px;
       text-indent: 0;
-      border: thin silver solid;
       margin: 0.5em;
       padding: 0.5em;
     }
+
+.contact {
+    margin-left: 60px;
+
+}
